@@ -10,6 +10,7 @@ devscripts (2.10.60) UNRELEASED; urgency=low
       for the patch.  (Closes: #562857)
     + Add missing verb in description of FTP syntax.  Thanks to Marco Túlio
       Gontijo for the patch.  (Closes: #562586)
+  * annotate-output: Allow specifying a timestamp format.  (Closes: #539720)
 
   [ Patrick Schoenfeld ]
   * licensecheck: Add support for some common variants of the WTFPL
